# mprpc

./: CMakeLists.txt  process.txt
example/: friend.pb.h  friend.proto  user.pb.h  user.proto  user_proto.txt
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: callfriendservice.cc  calluserservice.cc
lib/include/: mprpcapplication.h  mprpcchannel.h  rpcheader.pb.h  rpcprovider.h
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcheader.pb.cc  rpcheader.proto  rpcprovider.cc  zookeeperutil.cc
src/include/: lockqueue.h  logger.h  mprpcconfig.h  mprpccontroller.h  zookeeperutil.h
test/test_muduo/: CMakeLists.txt  muduo_server.cpp
test/test_muduo_dir/: main.cpp
test/test_protobuf/: main.cc  test.pb.cc  test.pb.h  test.proto
test/test_protobuf_string/: main.cc  test.pb.h  test.proto
